--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,16 @@ jobs:
     steps:
       - name: chequeo de codigo
         uses: actions/checkout@v4
-        
+
       - name: Login to DockerHub
         if: github.ref == 'refs/heads/master' # Solo master
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+     
+      - name: Buil and push imagen 
+        run: |
+         docker build -t app_net_web:v1 .
+         docker tag app_net_web:v1 xaviwill2020/app_net_web:v1
+         docker push xaviwill2020/app_net_web:v1
