--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,5 @@ jobs:
      
       - name: Buil and push imagen 
         run: |
-         docker build -t app_net_web:v1 .
-         docker tag app_net_web:v1 xaviwill2020/app_net_web:v1
+         docker build -t xaviwill2020/app_net_web:v1 .
          docker push xaviwill2020/app_net_web:v1
