--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
 
       - name: Login to DockerHub
         if: github.ref == 'refs/heads/master' # Solo master
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v3 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           
      
       - name: Buil and push imagen 
