--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Login to DockerHub
-        if: github.ref == 'refs/heads/master' # Solo master
+        #if: github.ref == 'refs/heads/master' # Solo master
         uses: docker/login-action@v3 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
