--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,3 +36,9 @@ jobs:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-region: us-east-1
+
+      - name: despliegue tarea
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with: 
+          family: app-web-test
+          task-definition: taskdefinition.json
